tests/invalid/teste_lexico.lang
//Erro léxico

int a = 5 @ 2;
